# meteo-api

./: .gitignore  README.md  pyproject.toml  requeriments.txt
src/meteo-api/: app.py  main.py  services.py
src/meteo-api/schemas/: historico.py
src/meteo_api/: app.py  services.py
src/meteo_api/schemas/: clima.py  previsao.py
